[package]
name = "rsplitter"
version = "0.1.0"
edition = "2021"
authors = ["Omar MHAIMDAT <omarmhaimdat@gmail.com>"]
description = "Rsplitter is a tool to split words from text that contains no spaces."
keywords = ["split", "splitter", "word splitter"]
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
