[package]
name = "rsplitter"
version = "0.1.4"
edition = "2021"
authors = ["Omar MHAIMDAT <omarmhaimdat@gmail.com>"]
description = "Splitter is a tool to split words from text that contains no spaces."
keywords = ["split", "splitter", "words", "text"]
license = "MIT"
url = "https://github.com/omarmhaimdat/splitter_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"